--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,48 +9,53 @@
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="99dp"
-        android:layout_height="66dp"
-        app:layout_constraintBottom_toTopOf="@+id/CrearORG"
+        android:layout_height="0dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="56dp"
+        app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.412"
         app:srcCompat="@drawable/usuario" />
 
     <TextView
         android:id="@+id/Nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="69dp"
         android:text="Usuario"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/CrearORG"
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <Button
         android:id="@+id/bttnPuntos"
-        android:layout_width="155dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="22dp"
         android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
         android:text="Puntos de recoleccón"
         app:layout_constraintBottom_toTopOf="@+id/bttnEvento"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.609"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/CrearORG"
+        app:layout_constraintStart_toStartOf="@+id/CrearORG"
         app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="114dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="144dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="3dp"
         app:layout_constraintBottom_toBottomOf="@+id/bttnPuntos"
-        app:layout_constraintEnd_toEndOf="@+id/bttnPuntos"
+        app:layout_constraintEnd_toStartOf="@+id/Nombre"
+        app:layout_constraintStart_toStartOf="@+id/imageView11"
         app:layout_constraintTop_toTopOf="@+id/bttnPuntos"
         app:srcCompat="@drawable/icono_puntos" />
 
@@ -59,74 +64,79 @@
         android:layout_width="155dp"
         android:layout_height="0dp"
         android:layout_marginTop="260dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="316dp"
         android:autoSizeTextType="none"
         android:background="@drawable/btn_other"
         android:text="Donar"
-        app:layout_constraintBottom_toTopOf="@+id/bttnPuntos"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.609"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
+        app:layout_constraintEnd_toEndOf="@+id/email"
+        app:layout_constraintStart_toEndOf="@+id/email"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/bttnEvento"
-        android:layout_width="155dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_other"
         android:onClick="irEventos"
         android:text="Eventos"
-        app:layout_constraintBottom_toTopOf="@+id/alimentosbttn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.609"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/imageView11"
+        app:layout_constraintEnd_toEndOf="@+id/alimentosbttn"
+        app:layout_constraintStart_toStartOf="@+id/alimentosbttn"
         app:layout_constraintTop_toBottomOf="@+id/bttnPuntos" />
 
     <Button
         android:id="@+id/alimentosbttn"
-        android:layout_width="155dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="0dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="106dp"
+        android:layout_marginBottom="109dp"
         android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
         android:text="Alimentos requeridos"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.609"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bttnEvento" />
+        app:layout_constraintBottom_toBottomOf="@+id/Empresas"
+        app:layout_constraintEnd_toEndOf="@+id/bttnPuntos"
+        app:layout_constraintStart_toStartOf="@+id/bttnPuntos"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="114dp"
+        android:layout_width="0dp"
         android:layout_height="59dp"
-        android:layout_marginEnd="144dp"
-        app:layout_constraintBottom_toBottomOf="@+id/CrearORG"
-        app:layout_constraintEnd_toEndOf="@+id/CrearORG"
-        app:layout_constraintTop_toTopOf="@+id/CrearORG"
+        android:layout_marginTop="184dp"
+        android:layout_marginBottom="184dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
+        app:layout_constraintEnd_toEndOf="@+id/imageView7"
+        app:layout_constraintStart_toStartOf="@+id/imageView7"
+        app:layout_constraintTop_toTopOf="@+id/imageView5"
         app:srcCompat="@drawable/icono_donacion"
         tools:srcCompat="@drawable/icono_donacion" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="108dp"
+        android:layout_width="0dp"
         android:layout_height="81dp"
-        android:layout_marginEnd="144dp"
-        app:layout_constraintBottom_toBottomOf="@+id/bttnEvento"
-        app:layout_constraintEnd_toEndOf="@+id/bttnEvento"
-        app:layout_constraintTop_toTopOf="@+id/bttnEvento"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="224dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="224dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/Empresas"
+        app:layout_constraintStart_toStartOf="@+id/imageView11"
+        app:layout_constraintTop_toTopOf="@+id/email"
         app:srcCompat="@drawable/icono_eventos"
         tools:srcCompat="@drawable/icono_eventos" />
 
     <ImageView
         android:id="@+id/imageView11"
         android:layout_width="118dp"
-        android:layout_height="64dp"
-        android:layout_marginEnd="144dp"
-        app:layout_constraintBottom_toBottomOf="@+id/alimentosbttn"
-        app:layout_constraintEnd_toEndOf="@+id/alimentosbttn"
-        app:layout_constraintTop_toTopOf="@+id/alimentosbttn"
+        android:layout_height="0dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginBottom="62dp"
+        app:layout_constraintBottom_toTopOf="@+id/Empresas"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bttnEvento"
         app:srcCompat="@drawable/basket"
         tools:srcCompat="@drawable/basket" />
 
@@ -134,28 +144,40 @@
         android:id="@+id/buttonLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="42dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="41dp"
         android:background="@drawable/btn_bg"
         android:text="Log off"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.907"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alimentosbttn"
-        app:layout_constraintVertical_bias="0.938" />
+        app:layout_constraintStart_toEndOf="@+id/Empresas"
+        app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="510dp"
         android:text="TextView"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/CrearORG"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/Nombre"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
+    <Button
+        android:id="@+id/Empresas"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginEnd="117dp"
+        android:layout_marginBottom="41dp"
+        android:autoSizeTextType="uniform"
+        android:background="@drawable/btn_other"
+        android:text="Empresas Aliadas"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonLog"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Nombre"
-        app:layout_constraintVertical_bias="0.025" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
