--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,175 +9,163 @@
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="99dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginBottom="56dp"
-        app:layout_constraintBottom_toTopOf="@+id/email"
+        android:layout_height="62dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/CrearORG"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.331"
         app:srcCompat="@drawable/usuario" />
 
     <TextView
         android:id="@+id/Nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="69dp"
         android:text="Usuario"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/CrearORG"
+        app:layout_constraintEnd_toEndOf="@+id/imageView5"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <Button
         android:id="@+id/bttnPuntos"
-        android:layout_width="0dp"
+        android:layout_width="155dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginTop="10dp"
         android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
         android:text="Puntos de recoleccón"
-        app:layout_constraintBottom_toTopOf="@+id/bttnEvento"
         app:layout_constraintEnd_toEndOf="@+id/CrearORG"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/CrearORG"
         app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="3dp"
+        android:layout_width="114dp"
+        android:layout_height="66dp"
         app:layout_constraintBottom_toBottomOf="@+id/bttnPuntos"
-        app:layout_constraintEnd_toStartOf="@+id/Nombre"
-        app:layout_constraintStart_toStartOf="@+id/imageView11"
+        app:layout_constraintEnd_toStartOf="@+id/bttnPuntos"
         app:layout_constraintTop_toTopOf="@+id/bttnPuntos"
         app:srcCompat="@drawable/icono_puntos" />
 
     <Button
         android:id="@+id/CrearORG"
         android:layout_width="155dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="260dp"
-        android:layout_marginBottom="316dp"
-        android:autoSizeTextType="none"
+        android:layout_height="wrap_content"
+        android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
         android:text="Donar"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
-        app:layout_constraintEnd_toEndOf="@+id/email"
-        app:layout_constraintStart_toEndOf="@+id/email"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.667"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.375" />
 
     <Button
         android:id="@+id/bttnEvento"
-        android:layout_width="0dp"
+        android:layout_width="155dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="10dp"
+        android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
         android:onClick="irEventos"
         android:text="Eventos"
-        app:layout_constraintBottom_toTopOf="@+id/imageView11"
-        app:layout_constraintEnd_toEndOf="@+id/alimentosbttn"
-        app:layout_constraintStart_toStartOf="@+id/alimentosbttn"
+        app:layout_constraintStart_toStartOf="@+id/bttnPuntos"
         app:layout_constraintTop_toBottomOf="@+id/bttnPuntos" />
 
     <Button
         android:id="@+id/alimentosbttn"
-        android:layout_width="0dp"
-        android:layout_height="66dp"
-        android:layout_marginTop="106dp"
-        android:layout_marginBottom="109dp"
+        android:layout_width="155dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
         android:text="Alimentos requeridos"
-        app:layout_constraintBottom_toBottomOf="@+id/Empresas"
-        app:layout_constraintEnd_toEndOf="@+id/bttnPuntos"
-        app:layout_constraintStart_toStartOf="@+id/bttnPuntos"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        app:layout_constraintEnd_toEndOf="@+id/bttnEvento"
+        app:layout_constraintStart_toStartOf="@+id/bttnEvento"
+        app:layout_constraintTop_toBottomOf="@+id/bttnEvento" />
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="0dp"
+        android:layout_width="114dp"
         android:layout_height="59dp"
-        android:layout_marginTop="184dp"
-        android:layout_marginBottom="184dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
-        app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintStart_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
+        app:layout_constraintBottom_toBottomOf="@+id/CrearORG"
+        app:layout_constraintEnd_toStartOf="@+id/CrearORG"
+        app:layout_constraintTop_toTopOf="@+id/CrearORG"
         app:srcCompat="@drawable/icono_donacion"
         tools:srcCompat="@drawable/icono_donacion" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="0dp"
+        android:layout_width="108dp"
         android:layout_height="81dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="224dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="224dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/Empresas"
-        app:layout_constraintStart_toStartOf="@+id/imageView11"
-        app:layout_constraintTop_toTopOf="@+id/email"
+        app:layout_constraintBottom_toBottomOf="@+id/bttnEvento"
+        app:layout_constraintEnd_toStartOf="@+id/bttnEvento"
+        app:layout_constraintTop_toTopOf="@+id/bttnEvento"
         app:srcCompat="@drawable/icono_eventos"
         tools:srcCompat="@drawable/icono_eventos" />
 
     <ImageView
         android:id="@+id/imageView11"
         android:layout_width="118dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="49dp"
-        android:layout_marginBottom="62dp"
-        app:layout_constraintBottom_toTopOf="@+id/Empresas"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bttnEvento"
+        android:layout_height="72dp"
+        app:layout_constraintBottom_toBottomOf="@+id/alimentosbttn"
+        app:layout_constraintEnd_toStartOf="@+id/alimentosbttn"
+        app:layout_constraintTop_toTopOf="@+id/alimentosbttn"
         app:srcCompat="@drawable/basket"
         tools:srcCompat="@drawable/basket" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="73dp"
+        android:layout_height="79dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/Empresas"
+        app:layout_constraintEnd_toStartOf="@+id/Empresas"
+        app:layout_constraintTop_toTopOf="@+id/Empresas"
+        app:layout_constraintVertical_bias="0.548"
+        app:srcCompat="@drawable/handshake_icon"
+        tools:srcCompat="@drawable/handshake_icon" />
 
     <Button
         android:id="@+id/buttonLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="41dp"
         android:background="@drawable/btn_bg"
         android:text="Log off"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Empresas"
-        app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
+        app:layout_constraintHorizontal_bias="0.717"
+        app:layout_constraintStart_toEndOf="@+id/imageView11"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.939" />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="510dp"
+        android:layout_marginTop="12dp"
         android:text="TextView"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/Nombre"
         app:layout_constraintStart_toStartOf="@+id/Nombre"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toBottomOf="@+id/Nombre" />
 
     <Button
         android:id="@+id/Empresas"
-        android:layout_width="0dp"
+        android:layout_width="155dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="41dp"
         android:autoSizeTextType="uniform"
+        android:layout_marginTop="10dp"
         android:background="@drawable/btn_other"
         android:text="Empresas Aliadas"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonLog"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
+        app:layout_constraintEnd_toEndOf="@+id/alimentosbttn"
+        app:layout_constraintStart_toStartOf="@+id/alimentosbttn"
+        app:layout_constraintTop_toBottomOf="@+id/alimentosbttn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
