--- a/app/src/main/res/layout/activity_borrar_evento_org.xml
+++ b/app/src/main/res/layout/activity_borrar_evento_org.xml
@@ -11,55 +11,32 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
-        android:layout_marginBottom="211dp"
         android:text="Borrar Evento"
         android:textColor="#0C0C0C"
         android:textSize="48sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="59dp"
+        tools:layout_editor_absoluteY="90dp" />
 
     <Button
         android:id="@+id/borrar"
         android:layout_width="231dp"
         android:layout_height="59dp"
-        android:layout_marginBottom="403dp"
         android:backgroundTint="#00BCD4"
         android:text="Borrar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="58dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginBottom="27dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Fecha"
-        app:srcCompat="@drawable/botedebasura" />
+        tools:ignore="TouchTargetSizeCheck"
+        tools:layout_editor_absoluteX="90dp"
+        tools:layout_editor_absoluteY="269dp" />
 
     <EditText
         android:id="@+id/Fecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="186dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="131dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="ID"
-        app:layout_constraintBottom_toTopOf="@+id/imageView12"
-        app:layout_constraintEnd_toEndOf="@+id/borrar"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="102dp"
+        tools:layout_editor_absoluteY="186dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
