--- a/app/src/main/res/layout/activity_borrar_evento_org.xml
+++ b/app/src/main/res/layout/activity_borrar_evento_org.xml
@@ -12,31 +12,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Borrar Evento"
-        android:textColor="#0C0C0C"
-        android:textSize="48sp"
+        android:textColor="@color/black"
+        android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="90dp" />
+        app:layout_constraintBottom_toTopOf="@+id/Fecha"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.511" />
 
     <Button
         android:id="@+id/borrar"
-        android:layout_width="231dp"
-        android:layout_height="59dp"
-        android:backgroundTint="#00BCD4"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="240dp"
+        android:background="@drawable/btn_bg"
         android:text="Borrar"
-        tools:ignore="TouchTargetSizeCheck"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="269dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/Fecha"
+        app:layout_constraintStart_toStartOf="@+id/Fecha"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/Fecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="Id"
         android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:text="ID"
-        tools:layout_editor_absoluteX="102dp"
-        tools:layout_editor_absoluteY="186dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.416" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
