--- a/app/src/main/res/layout/activity_borrar_evento_org.xml
+++ b/app/src/main/res/layout/activity_borrar_evento_org.xml
@@ -40,6 +40,7 @@
         android:ems="10"
         android:hint="Id"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
